customize the default theme

--- a/public/styles.css
+++ b/public/styles.css
@@ -1049,7 +1049,7 @@ footer a#back_to_top i {
 }
 
 .navbar-default {
-  background: #3f51b5;
+  background: #000080;
   box-shadow: 0 0.125rem 0.25rem 0 rgba(0,0,0,.11)
 }
 
@@ -1082,14 +1082,14 @@ nav#navbar-main li {
 }
 
 .navbar-default .navbar-nav>li>a:hover {
-  color: #8c9eff;
+  color: #00FF00;
   background-color: transparent;
 }
 
 .navbar-default .navbar-nav>.active>a,
 .navbar-default .navbar-nav>.active>a:focus,
 .navbar-default .navbar-nav>.active>a:hover {
-  color: #8c9eff;
+  color: #00FF00;
   font-weight: 700;
   background-color: transparent !important; /* Override Bootstrap. */
 }
@@ -1111,7 +1111,7 @@ nav#navbar-main li {
 }
 
 .dropdown-menu {
-  background-color: #3f51b5 !important;
+  background-color: #000080 !important;
 }
 
 .dropdown-menu > li > a {
@@ -1126,17 +1126,17 @@ nav#navbar-main li {
 
 .dropdown-menu>li>a:focus,
 .dropdown-menu>li>a:hover {
-  color: #8c9eff;
+  color: #00FF00;
   text-decoration: none;
-  background-color: #3f51b5;
+  background-color: #000080;
 }
 
 .dropdown-menu > .active > a,
 .dropdown-menu > .active > a:focus,
 .dropdown-menu > .active > a:hover {
-  color: #3f51b5;
+  color: #000080;
   text-decoration: none;
-  background-color: #8c9eff;
+  background-color: #00FF00;
   outline: 0;
 }
 
@@ -1145,7 +1145,7 @@ nav#navbar-main li {
 .navbar-default .navbar-nav>.open>a:hover,
 .navbar-default .navbar-nav>.open>a:visited {
   color: #fff !important;
-  background-color: #3f51b5 !important;
+  background-color: #000080 !important;
 }
 
 .navbar-default .navbar-brand {
@@ -1251,7 +1251,7 @@ nav#navbar-main li {
   .navbar-default .navbar-nav .open .dropdown-menu > .active > a,
   .navbar-default .navbar-nav .open .dropdown-menu > .active > a:focus,
   .navbar-default .navbar-nav .open .dropdown-menu > .active > a:hover {
-    color: #8c9eff;
+    color: #00FF00;
     background-color: transparent;
   }
 
