--- a/themes/hugo-academic/layouts/partials/site_footer.html
+++ b/themes/hugo-academic/layouts/partials/site_footer.html
@@ -14,7 +14,7 @@
   <p class="powered-by">
     {{ with site.Copyright }}{{ replace . "{year}" now.Year | markdownify}} &middot; {{ end }}
 
-    Powered by the
+    © 2016-2020 Thiyanga S Talagala: Powered by
     <a href="https://sourcethemes.com/academic/" target="_blank" rel="noopener">Academic theme</a> for
     <a href="https://gohugo.io" target="_blank" rel="noopener">Hugo</a>.
 
